kube.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: zb
  
  
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  namespace: zb
spec:
  selector:
    matchLabels:
      run: zabbix-web
  replicas: 2
  template:
    metadata:
      labels:
        run: zabbix-web
    spec:
      containers:
      - name: zabbix-web
        image: monitoringartist/zabbix-xxl:latest
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-db
  namespace: zb
spec:
  selector:
    matchLabels:
      run: zabbix-db
  replicas: 1
  template:
    metadata:
      labels:
        run: zabbix-db
    spec:
      containers:
      - name: zabbix-web
        image: monitoringartist/zabbix-db-mariadb
        ports:
          - containerPort: 3306
            name: mariadb
        volumeMounts:
          - name: zabbix-db-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: zabbix-db-storage
        emptyDir:
          medium: Memory


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: zb
spec:
  selector:
    matchLabels:
      run: zabbix-server
  replicas: 1
  template:
    metadata:
      labels:
        run: zabbix-server
    spec:
      containers:
      - name: zabbix-server
        image: monitoringartist/zabbix-xxl:latest
        ports:
          - containerPort: 162
            name: snmptrapd
          - containerPort: 10051
            name: zabbix-trapper
          - containerPort: 10052
            name: zabbix-jmx
