services.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-svc
  namespace: zb
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: zabbix-web
---

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-svc
  namespace: zb
spec:
  ports:
  - port: 10051
    targetPort: 10051
    name: zabbix-trapper
  - port: 10052
    targetPort: 10052
    name: zabbix-jmx
  selector:
    name: zabbix-server
---

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-db-svc
  namespace: zb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: zabbix-db
  selector:
    name: zabbix-db
