ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zabbix-ingress
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: zabbix.local
    http:
      paths:
      - path: /
        backend:
          serviceName: zabbix-web
          servicePort: 80
