zabbixdeployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbixcluster

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zabbix-ingress
  namespace: zabbixcluster
spec:
  ingressClassName: nginx
  rules:
  - host: zabbix.local
    http:
      paths:
      - path: /
        backend:
          serviceName: zabbix-web
          servicePort: 80
        
---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: zabbixcluster
  labels:
    app: zabbix
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: zabbix
---

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbixcluster
  labels:
    name: zabbix-server
spec:
  ports:
  - port: 10051
    targetPort: 10051
    name: zabbix-trapper
  - port: 10052
    targetPort: 10052
    name: zabbix-jmx
  selector:
    name: zabbix-server
---

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-db
  namespace: zabbixcluster
  labels:
    app: zabbix
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: zabbix-db
  selector:
    name: zabbix-db
